issue#1: button alignment

--- a/src/shared/containers/timeline-wall/pending-approvals/approval-item/styles.scss
+++ b/src/shared/containers/timeline-wall/pending-approvals/approval-item/styles.scss
@@ -100,7 +100,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 16px;
+    margin-top: 36px;
 
     .btn-trash {
       border: none;
